--- a/Other/Incentive_Compatible_Logistic_Regression_Slides.tex
+++ b/Other/Incentive_Compatible_Logistic_Regression_Slides.tex
@@ -49,7 +49,7 @@
 \item There are $n $ agents. Agent $i $ has public $x_{i}$ and private $y_{i.}$
 \item The principal uses a publicly known classifier.
 \item Agent $i $ chooses to report some $y^{\dagger}_{i}$ to maximize the probability that the classifier classifies $x_{i}$ correctly.
-\item Question: for which classifiers, the agents do not have incentive to misreport their $y_{i}$
+\item Question: for which classifiers, the agents do not have the incentive to misreport their $y_{i}$
 \end{itemize}
 \end{frame}
 
@@ -60,7 +60,7 @@
 \mathbb{P}\left\{Y = y_{i} | x_{i} ; w^\star \right\} &< \mathbb{P}\left\{Y = y_{i} | x_{i} ; w^\star \left(y^{\dagger}_{i}\right)\right\}.
 \end{align*}
 \begin{itemize}
-\item A classifier is incentive compatible if all datasets are incentive compatible given this classifier.
+\item A classifier is incentive-compatible if all datasets are incentive-compatible given this classifier.
 \end{itemize}
 \end{frame}
 
@@ -70,7 +70,7 @@
 
 \begin{frame} \frametitle{Logistic Regression Example}
 \begin{itemize}
-\item One numerical example dataset is not incentive compatible,
+\item One numerical example dataset is not incentive-compatible,
 \end{itemize}\begin{align*}
 \mathbb{P}\left\{Y = \text{\;red\;} | x_{\text{\;square\;}} ; w^\star \right\} &= 0.3290, \text{\;but\;}
 \\ \mathbb{P}\left\{Y = \text{\;red\;} | x_{\text{\;square\;}} ; w^\star \left(y^{\dagger}_{\text{\;square\;}} = \text{\;blue\;}\right)\right\} &= 0.4966.
@@ -104,7 +104,7 @@
 
 \begin{frame} \frametitle{Logistic Regression Experiments}
 \begin{itemize}
-\item R nnet package is used to estimate the logistic regression coefficients on $10000$ datasets of $100$ iid standard normally distributed points. If the labels are assigned at random, none of the datasets are incentive incompatible. If the random weights are used to create the labels (but with some error), then among the $10000$ dataset:
+\item R nnet package is used to estimate the logistic regression coefficients on $10000$ datasets of $100$ iid standard normally distributed points. If the labels are assigned at random, none of the datasets is incentive incompatible. If the random weights are used to create the labels (but with some error), then among the $10000$ datasets:
 \end{itemize}
 \begin{enumerate}
 \item $99952$ are IC
@@ -174,7 +174,7 @@
 
 \begin{frame} \frametitle{Intuition}
 \begin{itemize}
-\item An agent in class $a $ is mis-classified as $b $ may want to misreport as $c $ to move the decision boundary between $a $ and $b. $
+\item An agent in class $a $ is misclassified as $b $ may want to misreport as $c $ to move the decision boundary between $a $ and $b. $
 \item Two conditions to prevent this incentive incompatibility problem:
 \end{itemize}
 \begin{enumerate}
@@ -208,7 +208,7 @@
 \begin{itemize}
 \item MC and IIA may not be sufficient.
 \item A normalization condition is required: the sum of the losses over all classes for any point must be constant.
-\item ERM with zero-one loss satisfies MC and the normalization condition, but does not always satisfy the IIA condition.
+\item ERM with zero-one loss satisfies MC and the normalization condition but does not always satisfy the IIA condition.
 \end{itemize}
 \end{frame}
 
